[package]
name = "rust-music"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hound = "3.5"
rustfft = "6.1"
ndarray = "0.15"